# serverless-django

./: .gitignore  Dockerfile  README.md  bandit-baseline.json  docker-compose.yml  pyproject.toml  template.yaml
polls/: manage.py
polls/polls/: asgi.py  settings.py  urls.py  wsgi.py
polls/polls_app/: admin.py  apps.py  models.py  urls.py  views.py
polls/polls_app/migrations/: 0001_initial.py
polls/polls_app/templates/polls_app/: detail.html  index.html  results.html
