[tool.poetry]
name = "serverless-django"
version = "0.1.0"
description = "Using the Lambda Web Adapter with a Django application"
authors = ["Efi MK <efi.merdler@gmail.com>"]
license = "Apache License Version 2.0, January 2004"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
gunicorn = "^20.1.0"
whitenoise = "^6.4.0"
psycopg2-binary = "^2.9.6"
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^2.12.0"}

[tool.poe.tasks]
black = "black ."
black_ci = "black --check ."
lint = "ruff --fix ."
lint_ci = "ruff ."
mypy = {shell = "cd polls && mypy ."}
bandit = "bandit -r polls -b bandit-baseline.json"
run-server = {shell = "cd polls && python manage.py runserver"}
run-production = {shell = "gunicorn polls.wsgi:application --bind 0.0.0.0:8000"}
gate = ["black", "lint", "mypy", "bandit"]


[tool.poetry.group.dev.dependencies]
ipython = "^8.12.0"
mypy = "1.1.1"
black = "^23.3.0"
ruff = "^0.0.261"
bandit = "^1.7.5"
django-stubs = {extras = ["compatible-mypy"], version = "^1.16.0"}

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501"]


[tool.black]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
[tool.django-stubs]
django_settings_module = "polls.polls.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
